--- a/multizab/gui/templates/config.html
+++ b/multizab/gui/templates/config.html
@@ -42,7 +42,7 @@
                 <td>{{ host.host }}</td>
                 <td>{{ host.username }}</td>
                 <td>............</td>
-                <td><a type="button" class="btn btn-warning btn-xs">Delete</a>
+                <td><a type="button" class="btn btn-warning btn-xs" href="{{ url_for('gui.config_delete_host', host_id=host.id) }}">Delete</a>
                 </td>
             </tr>
             {% endfor %}
