--- a/multizab/templates/base.html
+++ b/multizab/templates/base.html
@@ -2,6 +2,7 @@
 <head>
     <title>MultiZab</title>
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -19,6 +20,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('gui.index') }}">Dashboard</a></li>
+                <li><a href="{{ url_for('gui.graphics') }}">Graphics</a></li>
                 <li><a href="{{ url_for('gui.config') }}">Config</a></li>
             </ul>
         </div>
@@ -49,6 +51,8 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/moment.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/angular-moment.min.js') }}"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/angular-chart.js') }}"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
