--- a/multizab/gui/templates/graphs.html
+++ b/multizab/gui/templates/graphs.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
+<meta http-equiv="refresh" content="30" >
 <div class="col-md-12" ng-app="multiZab">
-    <div class="row">
-        <div class="col-md-6" ng-controller="CountPerZabbixCtrl">
-            <div class="panel panel-default">
+    <div class="row" ng-controller="RefreshCacheCtrl">
+        <div class="col-md-6" ng-controller="CountAlertsCtrl">
+            <div class="panel panel-default" ng-show="labels">
                 <div class="panel-heading">Count Alerts Per Zabbix</div>
                 <div class="panel-body">
                     <canvas class="chart chart-polar-area" chart-data="data"
-                        chart-labels="labels" chart-legend="true">
+                            chart-labels="labels" chart-legend="true">
                     </canvas>
                 </div>
             </div>
@@ -17,18 +18,18 @@
                 <div class="panel-heading">Count Alerts Per Types</div>
                 <div class="panel-body">
                     <canvas class="chart chart-polar-area" chart-data="data"
-                        chart-labels="labels" chart-legend="true">
+                            chart-labels="labels" chart-legend="true">
                     </canvas>
                 </div>
             </div>
         </div>
-        <div ng-controller="ZabbixListCtrl">
-            <div class="col-md-6" ng-repeat="zabbix in results.result">
+        <div ng-controller="CountAlertsCtrl">
+            <div class="col-md-6" ng-repeat="label in labels">
                 <div class="panel panel-default">
-                    <div class="panel-heading">Count Alerts Per Types for {[zabbix]}</div>
-                    <div class="panel-body" ng-controller="CountPerTypesZabbixCtrl" ng-init="init(zabbix)">
+                    <div class="panel-heading">Count Alerts Per Types for {[label]}</div>
+                    <div class="panel-body" ng-controller="CountPerTypesZabbixCtrl" ng-init="init(label)">
                         <canvas class="chart chart-polar-area" chart-data="data"
-                            chart-labels="labels" chart-legend="true">
+                                chart-labels="labels" chart-legend="true">
                         </canvas>
                     </div>
                 </div>
