--- a/multizab/templates/base.html
+++ b/multizab/templates/base.html
@@ -50,6 +50,7 @@
     </div>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/moment.min.js') }}"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/angular-moment.min.js') }}"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/angular-chart.js') }}"></script>
